# robots-kin

./: .coverage  .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  test_main.http
.github/workflows/: main.yml
db/: create.sql
gke_deploy/robotstracker/: Chart.yaml  values.yaml
gke_deploy/robotstracker/templates/: deployment.yaml  secret.yaml  service.yaml
scripts/: cloud_run_build_deploy.sh  git_update.sh
src/: .env  config.py  db.py  main.py
src/api/: auth.py  documents.py  health.py  home.py  robots.py
src/crud/: robots.py
src/models/: robot.py
src/schemas/: robot.py
src/static/: styles.css
src/templates/: form.html  home.html  login.html
tests/: conftest.py  test_health.py
tools/: git_update.sh
